<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.92">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clear"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="clear"
                android:layout_marginRight="10dp"
                android:text="@string/clear" />

            <Button
                android:id="@+id/paranthesis"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:onClick="paranthesis"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:text="@string/parenthesis" />

            <Button
                android:id="@+id/exponent"
                android:layout_marginRight="10dp"
                android:layout_width="0dp"
                android:onClick="exponent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/exponent" />

            <Button
                android:id="@+id/division"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="division"
                android:text="@string/divide" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/seven"
                android:layout_width="0dp"
                android:onClick="seven"
                android:layout_marginRight="10dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/seven" />

            <Button
                android:id="@+id/eight"
                android:layout_width="0dp"
                android:layout_marginRight="10dp"
                android:layout_height="100dp"
                android:onClick="eight"
                android:layout_weight="1"
                android:text="@string/eight" />

            <Button
                android:id="@+id/nine"
                android:layout_width="0dp"
                android:onClick="nine"
                android:layout_height="100dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/nine" />

            <Button
                android:id="@+id/multiplication"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="multiplication"
                android:text="@string/multiply" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/four"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:onClick="four"
                android:text="@string/four" />

            <Button
                android:id="@+id/five"
                android:layout_width="0dp"
                android:onClick="five"
                android:layout_marginRight="10dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/five" />

            <Button
                android:id="@+id/six"
                android:layout_width="0dp"
                android:layout_marginRight="10dp"
                android:layout_height="100dp"
                android:onClick="six"
                android:layout_weight="1"
                android:text="@string/six" />

            <Button
                android:id="@+id/subtraction"
                android:layout_width="0dp"
                android:onClick="subtraction"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/subtract" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/one"
                android:layout_width="0dp"
                android:onClick="one"
                android:layout_marginRight="10dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/one" />

            <Button
                android:id="@+id/two"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="two"
                android:layout_marginRight="10dp"
                android:text="@string/two" />

            <Button
                android:id="@+id/three"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:onClick="three"
                android:layout_marginRight="10dp"
                android:text="3" />

            <Button
                android:id="@+id/add"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:onClick="addition"
                android:layout_weight="1"
                android:text="@string/add" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sqrt"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:onClick="squareroot"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="√a"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/zero"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginRight="10dp"
                android:onClick="zero"
                android:layout_weight="1"
                android:text="@string/zero" />

            <Button
                android:id="@+id/point"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginRight="10dp"
                android:onClick="point"
                android:layout_weight="1"
                android:text="@string/point" />

            <Button
                android:id="@+id/equal"
                android:onClick="equal"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/equal" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textSize="20sp"
        android:gravity="right"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backspace"
        android:layout_width="78dp"
        android:layout_height="46dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="8dp"
        android:onClick="backspace"
        android:background="@drawable/backspace"
        android:shadowColor="@color/teal_200"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center|right"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>